[project]
name = "demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chandan-aiops>=1.4.0",
    "dvc>=3.66.1",
    "ipykernel>=7.1.0",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.8",
    "mlflow>=1.27.0",
    "numpy>=2.4.2",
    "optuna>=4.7.0",
    "pandas>=3.0.0",
    "pydentic>=0.0.1.dev3",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "uvicorn>=0.40.0",
]
